--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Services/Web.config
@@ -198,14 +198,32 @@
         <add name="ioc" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Wcf.IoCInstanceProviderExtension, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
       </behaviorExtensions>
     </extensions>
+    <!--
+    <diagnostics>
+      <messageLogging logEntireMessage="true" 
+                      logMalformedMessages="false" 
+                      logMessagesAtServiceLevel="true" 
+                      logMessagesAtTransportLevel="false" 
+                      maxMessagesToLog="3000" 
+                      maxSizeOfMessageToLog="2000"/>
+    </diagnostics>
+    -->
   </system.serviceModel>
 
   <!--
   <system.diagnostics>
+    <sharedListeners>
+      <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSIntranet.svclog"/>
+    </sharedListeners>
     <sources>
-      <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
+      <source name="System.ServiceModel" switchValue="Verbose, ActivityTracing" propagateActivity="true">
         <listeners>
-          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Temp\OSIntranet.svclog"/>
+          <add name="sharedListener"/>
+        </listeners>
+      </source>
+      <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
+        <listeners>
+          <add name="sharedListener"/>
         </listeners>
       </source>
     </sources>
