--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -232,4 +232,18 @@
       </behaviorExtensions>
     </extensions>
   </system.serviceModel>
-onfiguration>
+
+  <!--
+  <system.diagnostics>
+    <sharedListeners>
+      <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSIntranet.svclog"/>
+    </sharedListeners>
+    <sources>
+      <source name="System.ServiceModel" switchValue="Verbose, ActivityTracing" propagateActivity="true">
+        <listeners>
+          <add name="sharedListener"/>
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
+  --</configuration>
