--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -29,7 +29,9 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                    transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00">
+                 transactionFlow="true" maxReceivedMessageSize="4194304"
+                    openTimeout="00:03:00" sendTimeout="00:03:00"
+                 receiveTimeout="00:03:00">
           <security mode="Message">
             <message clientCredentialType="Certificate"/>
           </security>
@@ -236,10 +238,15 @@
   <!--
   <system.diagnostics>
     <sharedListeners>
-      <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSIntranet.svclog"/>
+      <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.Tests.svclog"/>
     </sharedListeners>
     <sources>
       <source name="System.ServiceModel" switchValue="Verbose, ActivityTracing" propagateActivity="true">
+        <listeners>
+          <add name="sharedListener"/>
+        </listeners>
+      </source>
+      <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
