--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Services/Web.config
@@ -26,14 +26,16 @@
   </appSettings>
 
   <system.web>
-    <httpRuntime executionTimeout="300"/>
+    <httpRuntime executionTimeout="600"/>
   </system.web>
 
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
         <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                 transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:05:00">
+                 transactionFlow="true" maxReceivedMessageSize="4194304"
+                 openTimeout="00:05:00" sendTimeout="00:05:00"
+                 receiveTimeout="00:05:00">
           <security mode="Message">
             <message clientCredentialType="Certificate"/>
           </security>
@@ -203,10 +205,15 @@
   <!--
   <system.diagnostics>
     <sharedListeners>
-      <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSIntranet.svclog"/>
+      <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.svclog"/>
     </sharedListeners>
     <sources>
       <source name="System.ServiceModel" switchValue="Verbose, ActivityTracing" propagateActivity="true">
+        <listeners>
+          <add name="sharedListener"/>
+        </listeners>
+      </source>
+      <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
