--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -34,8 +34,7 @@
       <wsHttpBinding>
         <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
                  transactionFlow="true" maxReceivedMessageSize="4194304"
-                 openTimeout="00:05:00" sendTimeout="00:05:00"
-                 receiveTimeout="00:05:00">
+                 sendTimeout="00:05:00" receiveTimeout="00:05:00">
           <security mode="Message">
             <message clientCredentialType="Certificate"/>
           </security>
