--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -30,8 +30,8 @@
     <bindings>
       <wsHttpBinding        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
                  transactionFlow="true" maxReceivedMessageSize="4194304"
-                    openTimeout="00:03:00" sendTimeout="00:03:00"
-                 receiveTimeout="00:03:00">
+                 sendTimeout="00:03:00" receiveTimeout="00:03:00">
+>
           <security mode="Message">
             <message clientCredentialType="Certificate"/>
           </security>
