--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -28,6 +28,13 @@
 
   <system.serviceModel>
     <bindings>
+      <basicHttpBinding        <binding name="OSDevGrp.OSIntranet.BasicHttpBinding"
+                 maxReceivedMessageSize="4194304" sendTimeout="00:05:00"
+                 receiveTimeout="00:05:00">
+>
+          <security mode="None"/>
+        </binding>
+      </basicHttpBinding>
       <wsHttpBinding        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
                  transactionFlow="true" maxReceivedMessageSize="4194304"
                  sendTimeout="00:03:00" receiveTimeout="00:03:00">
@@ -81,6 +88,11 @@
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
+        </endpoint        <endpoint address="mobile"
+                     binding="wsBasicHttpBinding"
+               bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding"
+                  contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+>
         </endpoint        <endpoint address="mex"
                   binding="wsHttpBinding"
                   bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
