--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Services/Web.config
@@ -95,7 +95,7 @@
           </identity>
         </endpoint>
         <endpoint address="mobile"
-                  binding="wsBasicHttpBinding"
+                  binding="basicHttpBinding"
                   bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding"
                   contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
         </endpoint>
