--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Tests/App.config
@@ -89,8 +89,8 @@
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint        <endpoint address="mobile"
-                     binding="wsBasicHttpBinding"
-               bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding"
+                  binding="basicHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding"
                   contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
 >
         </endpoint        <endpoint address="mex"
