--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -3,7 +3,6 @@
   <configSections>
     <section name="iocConfiguration" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.ConfigurationSectionHandler, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
   </configSections>
-
   <iocConfiguration>
     <container type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Windsor.Container, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
     <containerConfigurationProviders>
@@ -13,51 +12,51 @@
       <add name="intranet" type="OSDevGrp.OSIntranet.Infrastructure.IoC.ConfigurationProvider, OSDevGrp.OSIntranet.Infrastructure"/>
     </containerConfigurationProviders>
   </iocConfiguration>
-
   <connectionStrings>
     <clear/>
     <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC"/>
   </connectionStrings>
-
   <appSettings>
     <add key="DebitorSaldoOverNul" value="False"/>
     <add key="KreditorSaldoOverNul" value="True"/>
     <add key="DageForBogføringsperiode" value="30"/>
   </appSettings>
+  <!--
+    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
 
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
     <httpRuntime executionTimeout="600"/>
+    <compilation targetFramework="4.5"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
-
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="OSDevGrp.OSIntranet.BasicHttpBinding"
-                 maxReceivedMessageSize="4194304" sendTimeout="00:05:00"
-                 receiveTimeout="00:05:00">
+        <binding name="OSDevGrp.OSIntranet.BasicHttpBinding" maxReceivedMessageSize="4194304" sendTimeout="00:05:00" receiveTimeout="00:05:00">
           <security mode="None"/>
         </binding>
       </basicHttpBinding>
       <wsHttpBinding>
-        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                 transactionFlow="true" maxReceivedMessageSize="4194304"
-                 sendTimeout="00:05:00" receiveTimeout="00:05:00">
+        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:05:00" receiveTimeout="00:05:00">
           <security mode="Message">
             <message clientCredentialType="Certificate"/>
           </security>
         </binding>
       </wsHttpBinding>
       <netTcpBinding>
-        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                 transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:05:00">
+        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:05:00">
           <security mode="Transport">
             <transport protectionLevel="EncryptAndSign"/>
           </security>
         </binding>
       </netTcpBinding>
       <netNamedPipeBinding>
-        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalNamedPipeBinding"
-                 transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:05:00">
+        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalNamedPipeBinding" transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:05:00">
           <security mode="Transport">
             <transport protectionLevel="EncryptAndSign"/>
           </security>
@@ -65,82 +64,50 @@
       </netNamedPipeBinding>
     </bindings>
     <services>
-      <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService"
-               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address=""
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-        <endpoint address="mex"
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="IMetadataExchange">
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
       </service>
-      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService" 
-               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address=""
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-        <endpoint address="mobile"
-                  binding="basicHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
-        </endpoint>
-        <endpoint address="mex"
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="IMetadataExchange">
+        <endpoint address="mobile" binding="basicHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService"/>
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
       </service>
-      <service name="OSDevGrp.OSIntranet.Services.Implementations.KalenderService"
-               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address=""
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.KalenderService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-        <endpoint address="mex"
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="IMetadataExchange">
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
       </service>
-      <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService"
-               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address=""
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-        <endpoint address="mex"
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="IMetadataExchange">
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
@@ -148,32 +115,17 @@
       </service>
     </services>
     <client>
-      <endpoint name="AdresseRepositoryService"
-                address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService"
-                behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior"
-                binding="netTcpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService">
+      <endpoint name="AdresseRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService">
         <identity>
           <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService"/>
         </identity>
       </endpoint>
-      <endpoint name="FinansstyringRepositoryService"
-                address="net.tcp://Mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService"
-                behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior"
-                binding="netTcpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService">
+      <endpoint name="FinansstyringRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService">
         <identity>
           <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService"/>
         </identity>
       </endpoint>
-      <endpoint name="FællesRepositoryService"
-                address="net.tcp://Mother:7000/OSIntranet/DataAccess/FællesRepositoryService"
-                behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior"
-                binding="netTcpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService">
+      <endpoint name="FællesRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService">
         <identity>
           <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService"/>
         </identity>
@@ -185,17 +137,12 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <serviceCredentials>
-            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services"
-                                storeLocation="LocalMachine"
-                                storeName="My"
-                                x509FindType="FindBySubjectName"/>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
             </clientCertificate>
           </serviceCredentials>
-          <serviceThrottling maxConcurrentCalls="500"
-                             maxConcurrentSessions="10000"
-                             maxConcurrentInstances="100"/>
+          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
       </serviceBehaviors>
@@ -212,7 +159,6 @@
       </behaviorExtensions>
     </extensions>
   </system.serviceModel>
-
   <!--
   <system.diagnostics>
     <sharedListeners>
