--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
->
+﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
     <section name="iocConfiguration" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.ConfigurationSectionHandler, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
@@ -28,209 +27,129 @@
 
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding        <binding name="OSDevGrp.OSIntranet.BasicHttpBinding"
-                 maxReceivedMessageSize="4194304" sendTimeout="00:05:00"
-                 receiveTimeout="00:05:00">
->
+      <basicHttpBinding>
+        <binding name="OSDevGrp.OSIntranet.BasicHttpBinding" maxReceivedMessageSize="4194304" sendTimeout="00:05:00" receiveTimeout="00:05:00">
           <security mode="None"/>
         </binding>
       </basicHttpBinding>
-      <wsHttpBinding        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                 transactionFlow="true" maxReceivedMessageSize="4194304"
-                 sendTimeout="00:03:00" receiveTimeout="00:03:00">
->
+      <wsHttpBinding>
+        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
             <message clientCredentialType="Certificate"/>
           </security>
         </binding>
       </wsHttpBinding>
-      <netTcpBinding        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                 transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:03:00">
->
+      <netTcpBinding>
+        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:03:00">
           <security mode="Transport">
             <transport protectionLevel="EncryptAndSign"/>
           </security>
         </binding>
       </netTcpBinding>
-      <netNamedPipeBinding        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalNamedPipeBinding"
-                 transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:03:00">
->
+      <netNamedPipeBinding>
+        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalNamedPipeBinding" transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:03:00">
           <security mode="Transport">
             <transport protectionLevel="EncryptAndSign"/>
           </security>
         </binding>
       </netNamedPipeBinding>
     </bindings>
-    <services      <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService"
-               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address=""
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
->
-          <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
-          </identity>
-        </endpoint        <endpoint address="mex"
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="IMetadataExchange">
->
+    <services>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-      </service      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService"
-               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address=""
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
->
-          <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
-          </identity>
-        </endpoint        <endpoint address="mobile"
-                  binding="basicHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
->
-        </endpoint        <endpoint address="mex"
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="IMetadataExchange">
->
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-      </service      <service name="OSDevGrp.OSIntranet.Services.Implementations.KalenderService"
-               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address=""
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
->
-          <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
-          </identity>
-        </endpoint        <endpoint address="mex"
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="IMetadataExchange">
->
+      </service>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-      </service      <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService"
-               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address=""
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
->
+        <endpoint address="mobile" binding="basicHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+        </endpoint>
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
-        </endpoint        <endpoint address="mex"
-                  binding="wsHttpBinding"
-                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                  contract="IMetadataExchange">
->
+        </endpoint>
+      </service>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.KalenderService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
       </service>
     </services>
-    <client      <endpoint name="AdressekartotekServiceIntegrationstest"
-                address="http://localhost/osintranetdev/adressekartotekservice.svc"
-                behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior"
-                binding="wsHttpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
->
+    <client>
+      <endpoint name="AdressekartotekServiceIntegrationstest" address="http://localhost/osintranetdev/adressekartotekservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
         <identity>
           <dns value="OSDevGrp.OSIntranet.Services"/>
         </identity>
-      </endpoint      <endpoint name="FinansstyringServiceIntegrationstest"
-                address="http://localhost/osintranetdev/finansstyringservice.svc"
-                behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior"
-                binding="wsHttpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
->
+      </endpoint>
+      <endpoint name="FinansstyringServiceIntegrationstest" address="http://localhost/osintranetdev/finansstyringservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
         <identity>
           <dns value="OSDevGrp.OSIntranet.Services"/>
         </identity>
-      </endpoint      <endpoint name="KalenderServiceIntegrationstest"
-                address="http://localhost/osintranetdev/kalenderservice.svc"
-                behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior"
-                binding="wsHttpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
->
+      </endpoint>
+      <endpoint name="KalenderServiceIntegrationstest" address="http://localhost/osintranetdev/kalenderservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
         <identity>
           <dns value="OSDevGrp.OSIntranet.Services"/>
         </identity>
-      </endpoint      <endpoint name="CommonServiceIntegrationstest"
-                address="http://localhost/osintranetdev/commonservice.svc"
-                behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior"
-                binding="wsHttpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
-                contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
->
+      </endpoint>
+      <endpoint name="CommonServiceIntegrationstest" address="http://localhost/osintranetdev/commonservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
         <identity>
           <dns value="OSDevGrp.OSIntranet.Services"/>
         </identity>
-      </endpoint      <endpoint name="AdresseRepositoryService"
-                address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService"
-                behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior"
-                binding="netTcpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService"/>
-      <endpoint name="FinansstyringRepositoryService"
-                address="net.tcp://Mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService"
-                behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior"
-                binding="netTcpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService"/>
-      <endpoint name="FællesRepositoryService"
-                address="net.tcp://Mother:7000/OSIntranet/DataAccess/FællesRepositoryService"
-                behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior"
-                binding="netTcpBinding"
-                bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService"/>
->
+      </endpoint>
+      <endpoint name="AdresseRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService"/>
+      <endpoint name="FinansstyringRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService"/>
+      <endpoint name="FællesRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService"/>
     </client>
     <behaviors>
       <serviceBehaviors>
         <behavior name="OSDevGrp.OSIntranet.IoCServiceBehavior">
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="True"/>
-          <serviceCredentials            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services"
-                                storeLocation="LocalMachine"
-                                storeName="My"
-                                x509FindType="FindBySubjectName"/>
->
+          <serviceCredentials>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
             </clientCertificate>
-          </serviceCredentials          <serviceThrottling maxConcurrentCalls="500"
-                             maxConcurrentSessions="10000"
-                             maxConcurrentInstances="100"/>
->
+          </serviceCredentials>
+          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="OSDevGrp.OSIntranet.EndpointBehavior">
-          <clientCredentials            <clientCertificate findValue="OSDevGrp.OSIntranet.Clients"
-                               storeLocation="LocalMachine"
-                               storeName="My"
-                               x509FindType="FindBySubjectName"/>
->
+          <clientCredentials>
+            <clientCertificate findValue="OSDevGrp.OSIntranet.Clients" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <serviceCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
             </serviceCertificate>
@@ -267,4 +186,5 @@
       </source>
     </sources>
   </system.diagnostics>
-  --</configuration>
+  -->
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
